Dynegy/src/objects/Mass_Market__c.object
<CustomObject>
    <description>Staging object to load Mass Market Person Accounts from csv file</description>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>This Field is created during the iAve Conversion</description>
        <label>Account Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Type_Code__c</fullName>
        <description>This field is added during the iave Conversion</description>
        <label>Account Type Code</label>
        <picklist>
            <picklistValues>
                <fullName>FLOW_THROUGH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RETAIL_FRIEND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RETAIL_STANDALONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RETAIL_SUBACCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCBNONPOR_RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCBPOR_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCBPOR_RR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WHOLESALE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bill_Cycle__c</fullName>
        <label>Bill Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Blank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_2__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Billing Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_3__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Billing Address Line 3 (ICO)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_code__c</fullName>
        <label>Billing Zip/Postal code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing__c</fullName>
        <label>Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enrollment_Start_Date__c</fullName>
        <description>The Date a customer contacted Dynegy to Begin Enrollment Process. Obtained from Data Load of Customers.</description>
        <inlineHelpText>The Date a customer contacted Dynegy to Begin Enrollment Process.</inlineHelpText>
        <label>Enrollment Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Type__c</fullName>
        <label>Enrollment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Entry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grace_CD__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Grace CD</label>
        <picklist>
            <picklistValues>
                <fullName>PCX</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDC_Account_Name__c</fullName>
        <label>LDC Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Account_Number__c</fullName>
        <label>LDC Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDC_Receive_Invoices_By__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>LDC Receive Invoices By</label>
        <picklist>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMail &amp; Mail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDC_Type__c</fullName>
        <label>LDC Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDC_Vendor__c</fullName>
        <label>LDC Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line_2__c</fullName>
        <description>This field is created during the iAve conversion</description>
        <label>Mailing Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_Line_3__c</fullName>
        <description>This field is created during the iAve Conversion</description>
        <label>Mailing Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <description>This field is created to store the Mailing City for Person customer during iAve Conversion.</description>
        <label>Mailing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <description>This field is created to store the mailing country for Person customer during iAve Conversion.</description>
        <label>Mailing Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Province__c</fullName>
        <description>This field is created to store the mailing State for Person customer during iAve Conversion.</description>
        <label>Mailing State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <description>This field is created to store the mailing street for Person customer during iAve Conversion.</description>
        <label>Mailing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Website__c</fullName>
        <description>This field is add during the iAve Conversion</description>
        <label>Mailing Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Postal_Code__c</fullName>
        <description>This field is created to store the mailing postal code for Person customer during iAve Conversion.</description>
        <label>Mailing Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Code__c</fullName>
        <label>Offer Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Code__c</fullName>
        <label>Rate Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_City__c</fullName>
        <label>Service City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_County__c</fullName>
        <label>Service County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Postal_Code__c</fullName>
        <label>Service Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_State__c</fullName>
        <label>Service State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Street_1__c</fullName>
        <label>Service Street 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Street_2__c</fullName>
        <label>Service Street 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <label>Service Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Unique_ID__c</fullName>
        <description>This field is created during iAve Conversion to store Utility Unique Id</description>
        <label>Utility Unique ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Mass Market</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LDC_Account_Number__c</columns>
        <columns>LDC_Vendor__c</columns>
        <columns>Offer_Code__c</columns>
        <columns>Service_Territory__c</columns>
        <columns>Processed__c</columns>
        <columns>Has_Error__c</columns>
        <columns>Error_Message__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LDC_Account_Number__c</field>
            <operation>equals</operation>
            <value>1360384102</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Has_Errors</fullName>
        <columns>NAME</columns>
        <columns>LDC_Account_Number__c</columns>
        <columns>LDC_Vendor__c</columns>
        <columns>Offer_Code__c</columns>
        <columns>Service_Territory__c</columns>
        <columns>Processed__c</columns>
        <columns>Has_Error__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Has_Error__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Has Errors</label>
    </listViews>
    <listViews>
        <fullName>Not_Processed</fullName>
        <columns>NAME</columns>
        <columns>LDC_Account_Number__c</columns>
        <columns>LDC_Vendor__c</columns>
        <columns>Offer_Code__c</columns>
        <columns>Service_Territory__c</columns>
        <columns>Processed__c</columns>
        <columns>Has_Error__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Not Processed</label>
    </listViews>
    <listViews>
        <fullName>Not_Processed_Today</fullName>
        <columns>NAME</columns>
        <columns>LDC_Account_Number__c</columns>
        <columns>LDC_Vendor__c</columns>
        <columns>Offer_Code__c</columns>
        <columns>Service_Territory__c</columns>
        <columns>Processed__c</columns>
        <columns>Has_Error__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Not Processed_Today</label>
    </listViews>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>Mass Market Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Market</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>